# accel

./: .gitignore  2.5-accel_smart-design.md  Cargo.toml  PROJECT_CONTEXT.md  README.md  acc.conf  acc.conf.example  accel  build-static.sh  build.rs  d7-monitor.expected.md5  d7-monitor.sh  verify-2.3.sh  verify-smart-d2.sh  verify-smart-d4.sh  verify-smart-d5.sh  verify-smart-d6.sh
.cargo/: config.toml
ebpf/: classifier.c
ebpf/algorithms/: VENDOR.md  accel_bbr.bpf.c  accel_brutal.bpf.c  accel_common.h  accel_cubic.bpf.c  accel_smart.bpf.c  accel_smart_dup.bpf.c
src/: algo.rs  cli.rs  config.rs  ebpf_loader.rs  health.rs  incidents.rs  main.rs  mode.rs  ports.rs  socket.rs  status.rs
