# accel - 高性能服务器端 TCP 加速器
#
# v0.2 架构:eBPF struct_ops 替换内核 TCP 拥塞控制算法。
# 不再拦截流量、不再走 AF_XDP/smoltcp 用户态栈。
#
# 精确版本 pin (= 前缀):防止 cargo update 引入非预期变化。

[package]
name = "accel"
version = "0.2.0"
edition = "2021"
authors = ["123hehehe321"]
description = "High-performance server-side TCP accelerator using eBPF struct_ops"
repository = "https://github.com/123hehehe321/accel"
license = "MIT"
readme = "README.md"

[dependencies]
# 应用层错误处理
anyhow = "1"

# TOML 配置解析
toml = "1"
serde = { version = "1", features = ["derive"] }

# /proc 读取里的 sysconf 等 libc 调用
libc = "0.2"

# SIGINT / SIGTERM 处理
ctrlc = { version = "=3.5.2", features = ["termination"] }

# eBPF runtime loader (used from 2.1-D4 onwards).
libbpf-rs = "=0.26.2"

[build-dependencies]
# SkeletonBuilder in build.rs compiles ebpf/algorithms/*.bpf.c and emits
# <name>.skel.rs into OUT_DIR.
libbpf-cargo = "=0.26.2"

# Pre-generated vmlinux.h for multiple arches.  Not published to crates.io;
# pinned to the same commit hash used by libbpf-rs examples/tcp_ca so we
# inherit their compatibility matrix.
vmlinux = { git = "https://github.com/libbpf/vmlinux.h.git", rev = "991dd4b8dfd8c9d62ce8999521b24f61d9b7fc52" }

# ──────────────────────────────────────────────────────────
# 构建配置
# ──────────────────────────────────────────────────────────

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
